# tourne

./: .gitignore  AGENTS.md  PROMT.md  README.md  radio-tui.cabal
.beads/: metadata.json
app/: Main.hs
docs/plans/: streamly-refactor.md
internal/Tourne/Audio/Stream/: Shim.hs
src/: Tourne.hs
src/Tourne/: AdDetection.hs  Config.hs  Error.hs  Failover.hs  Http.hs  Persistence.hs  PingChecker.hs  RadioBrowser.hs  Types.hs
src/Tourne/Audio/: Decoder.hs  IcyMeta.hs  Player.hs  Stream.hs  Types.hs
src/Tourne/Audio/Player/: FFI.hs  Helpers.hs  State.hs
src/Tourne/Effect/: HttpClient.hs  Tracer.hs
src/Tourne/TUI/: App.hs  Core.hs  Draw.hs  Events.hs
src/Tourne/TUI/Events/: Navigate.hs  Normal.hs  Persist.hs  Search.hs  Util.hs
test/: Main.hs
test/Tourne/Test/: Decoder.hs  Error.hs  HttpClient.hs  IcyMeta.hs  Mpg123.hs  Persistence.hs  SafeExceptions.hs  Sorting.hs  Stream.hs  Streamly.hs  Tracer.hs  Util.hs
