cabal-version: 3.0
name:          tourne
version:       0.1.0.0
synopsis:      Terminal radio listening app
description:   A TUI internet radio app using radio-browser.info API with native audio via SDL2 and libmpg123.
author:        Tourne Team
license:       BSD-3-Clause
build-type:    Simple

common warnings
  ghc-options: -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates

common defaults
  import:           warnings
  default-language: Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    DeriveGeneric
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables
    FlexibleContexts
    FlexibleInstances
    TypeApplications
    BlockArguments
    ImportQualifiedPost
    TupleSections
    RecordWildCards

library
  import:         defaults
  hs-source-dirs: src
  exposed-modules:
    Tourne
    Tourne.Types
    Tourne.Config
    Tourne.RadioBrowser
    Tourne.PingChecker
    Tourne.AdDetection
    Tourne.Failover
    Tourne.Audio.Types
    Tourne.Audio.Stream
    Tourne.Audio.Decoder
    Tourne.Audio.Player
    Tourne.TUI.Core
    Tourne.TUI.App
    Tourne.TUI.Draw
    Tourne.TUI.Events

  build-depends:
    , base                 >= 4.18    && < 5
    , relude               >= 1.2     && < 1.3
    , effectful            >= 2.6     && < 2.7
    , brick                >= 2.10    && < 2.13
    , vty                  >= 6.5     && < 6.6
    , http-conduit         >= 2.3     && < 2.4
    , http-client          >= 0.7     && < 0.8
    , http-client-tls      >= 0.4     && < 0.5
    , http-types           >= 0.12    && < 0.13
    , aeson                >= 2.3     && < 2.4
    , sdl2                 >= 2.5     && < 2.6
    , async                >= 2.2     && < 2.3
    , text                 >= 2.0     && < 2.2
    , bytestring           >= 0.11    && < 0.13
    , vector               >= 0.13    && < 0.14
    , stm                  >= 2.5     && < 2.6
    , time                 >= 1.12    && < 1.13
    , containers           >= 0.6     && < 0.8
    , unordered-containers >= 0.2     && < 0.3
    , microlens            >= 0.5     && < 0.6
    , microlens-th         >= 0.4     && < 0.5
    , extra                >= 1.8     && < 1.9
    , directory            >= 1.3     && < 1.4
    , case-insensitive     >= 1.2     && < 1.3


  pkgconfig-depends:
    , sdl2
    , libmpg123

executable tourne
  import:         defaults
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -threaded
  build-depends:
    , tourne
    , base
    , relude
    , brick
    , sdl2
    , effectful
    , vty
    , vty-crossplatform
    , stm
    , unix
